# watt

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  test.oil  test.wt  tool  w
crates/oil/: Cargo.toml
crates/oil/src/: errors.rs  lib.rs  main.rs  oil.rs
crates/oil/src/commands/: init.rs  run.rs
crates/oil/src/config/: config.rs
crates/oil/src/dependencies/: dependencies.rs
crates/oil_compile/: Cargo.toml
crates/oil_compile/src/: errors.rs  lib.rs  package.rs  project.rs
crates/oil_compile/src/analyze/: analyze.rs  env.rs  errors.rs  mod.rs  rc_ptr.rs  res.rs  resolve.rs  rib.rs  typ.rs  warnings.rs
crates/oil_compile/src/analyze/module/: analyze.rs  decl.rs  expr.rs  mod.rs  stmt.rs
crates/oil_compile/src/codegen/: codegen.rs  gen.rs
crates/oil_compile/src/io/: errors.rs  io.rs  mod.rs
crates/oil_gen/: Cargo.toml
crates/oil_gen/src/: generator.rs  lib.rs  visitor.rs
crates/oil_ir/: Cargo.toml
crates/oil_ir/src/: errors.rs  ir.rs  lib.rs  lowering.rs
crates/oil_pm/: Cargo.toml
crates/oil_pm/src/: compile.rs  errors.rs  generate.rs  lib.rs  runtime.rs
crates/oil_pm/src/config/: config.rs  mod.rs
crates/oil_pm/src/dependencies/: dependencies.rs  mod.rs
crates/watt/: Cargo.toml
crates/watt/src/: errors.rs  log.rs  main.rs
crates/watt/src/commands/: build.rs  check.rs  compile.rs  init.rs  mod.rs  new.rs  run.rs
crates/watt_compile/: Cargo.toml
crates/watt_compile/src/: errors.rs  lib.rs  package.rs  project.rs
crates/watt_compile/src/io/: errors.rs  mod.rs
crates/watt_lint/: Cargo.toml
crates/watt_lint/src/: case.rs  consts.rs  lib.rs  lint.rs  warnings.rs
crates/watt_orchestra/: Cargo.toml
crates/watt_orchestra/src/: errors.rs  io.rs  lib.rs
crates/watt_pm/: Cargo.toml
crates/watt_pm/src/: compile.rs  errors.rs  generate.rs  lib.rs  url.rs
crates/watt_pm/src/config/: mod.rs
crates/watt_pm/src/dependencies/: mod.rs
crates/watt_tests/: Cargo.toml
crates/watt_tests/src/: ast.rs  js.rs  lex.rs  lib.rs  utils.rs
crates/watt_tests/src/codegen/: enums.rs  functions.rs  mod.rs  patterns.rs  semi.rs  simple.rs  structs.rs
crates/watt_tests/src/codegen/snapshots/: watt_tests__codegen__ast__logical_or_and.snap  watt_tests__codegen__enums__enum_with_fields.snap  watt_tests__codegen__enums__enum_with_generics.snap  watt_tests__codegen__enums__enum_with_generics_2.snap  watt_tests__codegen__enums__recursive_enums.snap  watt_tests__codegen__enums__simple_enum.snap  watt_tests__codegen__enums__wrong_enum_with_generics.snap  watt_tests__codegen__enums__wrong_enum_with_generics_2.snap  watt_tests__codegen__functions__wrong_argument.snap  watt_tests__codegen__patterns__match_boolean.snap  watt_tests__codegen__patterns__match_enum_with_lost_case_covered_by_default.snap  watt_tests__codegen__patterns__match_enum_with_params.snap  watt_tests__codegen__patterns__match_literals.snap  watt_tests__codegen__patterns__match_nested.snap  watt_tests__codegen__patterns__match_simple_enum.snap  watt_tests__codegen__semi__for_should_not_require_semi.snap  watt_tests__codegen__semi__if_should_not_require_semi.snap  watt_tests__codegen__semi__loop_should_not_require_semi.snap  watt_tests__codegen__simple__add_sub_mul_div_mod.snap  watt_tests__codegen__simple__boolean_logic.snap  watt_tests__codegen__simple__cast_int_float.snap  watt_tests__codegen__simple__if_elif_else_test.snap  watt_tests__codegen__simple__naming.snap  watt_tests__codegen__simple__parens_expr.snap  watt_tests__codegen__simple__simple_add_two_ints.snap  watt_tests__codegen__simple__simple_for_loop.snap  watt_tests__codegen__simple__simple_for_loop_2.snap  watt_tests__codegen__simple__simple_if_test.snap  watt_tests__codegen__simple__simple_loop.snap  watt_tests__codegen__simple__simple_string_concat.snap  watt_tests__codegen__structs__simple_struct.snap  watt_tests__codegen__structs__struct_types_missmatch.snap  watt_tests__codegen__structs__structs_with_generics.snap  watt_tests__codegen__structs__structs_with_generics_2.snap  watt_tests__codegen__structs__wrong_struct_with_generics.snap  watt_tests__codegen__structs__wrong_struct_with_generics_2.snap
crates/watt_tests/src/snapshots/: watt_tests__ast__logical_or_and.snap  watt_tests__lex__escape_sequence_1.snap  watt_tests__lex__escape_sequence_10.snap  watt_tests__lex__escape_sequence_11.snap  watt_tests__lex__escape_sequence_12.snap  watt_tests__lex__escape_sequence_13.snap  watt_tests__lex__escape_sequence_14.snap  watt_tests__lex__escape_sequence_15.snap  watt_tests__lex__escape_sequence_16.snap  watt_tests__lex__escape_sequence_2.snap  watt_tests__lex__escape_sequence_3.snap  watt_tests__lex__escape_sequence_4.snap  watt_tests__lex__escape_sequence_5.snap  watt_tests__lex__escape_sequence_6.snap  watt_tests__lex__escape_sequence_7.snap  watt_tests__lex__escape_sequence_8.snap  watt_tests__lex__escape_sequence_9.snap
crates/watt_typeck/: Cargo.toml
crates/watt_typeck/src/: errors.rs  ex.rs  lib.rs  pretty.rs  typ.rs  unify.rs  warnings.rs
crates/watt_typeck/src/check/: decl.rs  early.rs  expr.rs  late.rs  mod.rs  pipeline.rs  stmt.rs  typ.rs
crates/watt_typeck/src/check/early/: functions.rs  mod.rs  types.rs
crates/watt_typeck/src/check/late/: functions.rs  mod.rs  types.rs
crates/watt_typeck/src/cx/: mod.rs  module.rs  package.rs  root.rs
crates/watt_typeck/src/inference/: README.md  cause.rs  coercion.rs  equation.rs  generics.rs  hydrator.rs  mod.rs  origin.rs
crates/watt_typeck/src/resolve/: generics.rs  mod.rs  res.rs  resolve.rs  rib.rs
crates/watt_typeck/src/typ/: README.md  cx.rs  def.rs  mod.rs  res.rs  typ.rs
crates/watt_typeck/src/utils/: mod.rs
watt/crates/watt_gen/: Cargo.toml
watt/crates/watt_gen/src/: generator.rs  lib.rs  resolver.rs  visitor.rs
watt/crates/watt_vm/: Cargo.toml
watt/crates/watt_vm/src/: bytecode.rs  flow.rs  lib.rs  table.rs  values.rs  vm.rs
watt/crates/watt_vm/src/memory/: gc.rs  memory.rs  mod.rs  tracer.rs
watt/crates/watt_vm/src/natives/: natives.rs  utils.rs
watt/crates/watt_vm/src/natives/libs/: mod.rs  (+14 more)
(+340 files in other folders)
