[package]
name = "oil"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
oil_common = { path = "../oil_common" }
oil_compile = { path = "../oil_compile" }
camino = "1.1.10"
thiserror = "2.0.12"
miette = { version = "7.6.0", features = ["fancy"] }
log = "0.4.27"
pretty_env_logger = "0.4"
ecow = "0.2.6"
oil_pm = { path = "../oil_pm" }
