[package]
name = "oil_compile"
version = "0.1.0"
edition = "2024"

[dependencies]
oil_lex = { path = "../oil_lex" }
oil_parse = { path = "../oil_parse" }
oil_common = { path = "../oil_common" }
oil_ir = { path = "../oil_ir" }
oil_ast = { path = "../oil_ast" }
oil_gen = { path = "../oil_gen" }
miette = { version = "7.6.0", features = ["fancy"] }
ecow = "0.2.6"
camino = "1.1.10"
thiserror = "2.0.12"
log = "0.4.27"
walkdir = "2.5.0"
pretty_env_logger = "0.4"
petgraph = "0.8.2"
