[package]
name = "watt_compile"
version = "0.1.0"
edition = "2024"

[dependencies]
watt_lex = { path = "../watt_lex" }
watt_parse = { path = "../watt_parse" }
watt_common = { path = "../watt_common" }
watt_ast = { path = "../watt_ast" }
watt_typeck = { path = "../watt_typeck" }
watt_gen = { path = "../watt_gen" }
watt_lint = { path = "../watt_lint" }
miette = { git = "https://github.com/watt-rs/miette.git", features = ["fancy"] }
ecow = "0.2.6"
camino = "1.1.10"
thiserror = "2.0.12"
walkdir = "2.5.0"
petgraph = "0.8.2"
tracing-subscriber = "0.3.22"
tracing = "0.1.44"
