[package]
name = "watt_pm"
version = "0.1.0"
edition = "2024"

[dependencies]
ecow = "0.2.6"
git2 = "0.20.2"
url = "2.5.7"
console = "0.16.1"
indicatif = "0.18.0"
camino = "1.1.10"
miette = { git = "https://github.com/watt-rs/miette.git", features = ["fancy"] }
thiserror = "2.0.12"
petgraph = "0.8.2"
watt_common = { path = "../watt_common" }
watt_compile = { path = "../watt_compile" }
serde = { version = "1.0.226", features = ["derive"] }
toml = "0.9.7"
watt_gen = { path = "../watt_gen" }
tracing = "0.1.44"
clap = { version = "4.5.1", features = ["derive"] }
