[package]
name = "watt_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
insta = "1.46.0"
watt_lex = { path = "../watt_lex" }
watt_parse = { path = "../watt_parse" }
watt_common = { path = "../watt_common" }
watt_ast = { path = "../watt_ast" }
watt_typeck = { path = "../watt_typeck" }
watt_gen = { path = "../watt_gen" }
watt_lint = { path = "../watt_lint" }
miette = { git = "https://github.com/watt-rs/miette.git", features = ["fancy"] }
camino = "1.1.10"
ecow = "0.2.6"
regex = "1.12.2"
