[package]
name = "watt_typeck"
version = "0.1.0"
edition = "2024"

[dependencies]
watt_lex = { path = "../watt_lex" }
watt_parse = { path = "../watt_parse" }
watt_common = { path = "../watt_common" }
watt_ast = { path = "../watt_ast" }
miette = { git = "https://github.com/watt-rs/miette.git", features = ["fancy"] }
ecow = "0.2.6"
camino = "1.1.10"
thiserror = "2.0.12"
log = "0.4.27"
walkdir = "2.5.0"
petgraph = "0.8.2"
indexmap = "2.12.0"
